# echo

./: .gitignore  Cargo.toml  README.md
backend/: .env.example  .gitignore  Cargo.toml
backend/migrations/: 20251202155721_create_users_table.sql  20251203000000_add_names_to_users.sql
backend/src/: error.rs  handler.rs  main.rs  middleware.rs  models.rs  state.rs  tests.rs
desktop/: .env.example  package-lock.json  package.json
desktop/src/: App.css  App.tsx  config.ts  crypto.ts
desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: clipboard.rs  lib.rs
