[package]
name = "backend"
version = "0.1.0"
edition = "2021"


[dependencies]
# Security & Hashing
argon2 = "0.5.3"
rand = "0.9.2"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }

# Web Framework (Axum 0.8)
axum = { version = "0.8.7", features = ["ws"] }
axum-extra = { version = "0.12.2", features = ["typed-header"] }
tower = "0.5.2"
tower-http = { version = "0.6.7", features = ["cors", "trace"] }

# Async Runtime (Must have "full" for TCP/IO)
tokio = { version = "1.48.0", features = ["full"] }

# Database (SQLx 0.8)
# We use 'runtime-tokio-rustls' for pure Rust TLS (portable binary)
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "uuid"] }

# Serialization
# Must have "derive" to use #[derive(Serialize)]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# Utilities
dashmap = "6.1.0"
dotenvy = "0.15.7"
# Must have "v4" for generation and "serde" to send IDs in JSON
uuid = { version = "1.18.1", features = ["v4", "serde"] }

# Observability
tracing = "0.1.43"
# Must have "env-filter" to read RUST_LOG from .env
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
anyhow = "1.0.100"
futures = "0.3.31"
